--- a/lib/tensor/CMakeLists.txt
+++ b/lib/tensor/CMakeLists.txt
@@ -6,5 +6,6 @@ target_compile_features(tensor PUBLIC cxx_std_20 )
 file(GLOB test_src tests/*)
 add_executable(tensor_test ${test_src})
 target_link_libraries(tensor_test GTest::gtest_main)
+target_link_libraries(tensor_test tensor)
 gtest_discover_tests(tensor_test)
 
