--- a/lib/NN/CMakeLists.txt
+++ b/lib/NN/CMakeLists.txt
@@ -1,10 +1,10 @@
-file(GLOB lib_src src/*)
+file(GLOB_RECURSE lib_src src/*)
 add_library(NN STATIC ${lib_src})
 target_include_directories(NN PUBLIC src/)
 target_link_libraries(NN PUBLIC tensor) 
 target_compile_features(NN PUBLIC cxx_std_20 )
 
-file(GLOB test_src tests/*)
+file(GLOB_RECURSE test_src tests/*)
 add_executable(NN_test ${test_src})
 target_link_libraries(NN_test GTest::gtest_main)
 target_link_libraries(NN_test NN)
