--- a/lib/NN/CMakeLists.txt
+++ b/lib/NN/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(NN STATIC ${lib_src})
 target_include_directories(NN PUBLIC src/)
 target_link_libraries(NN PUBLIC tensor) 
 target_compile_features(NN PUBLIC cxx_std_20 )
-#target_link_libraries(NN PUBLIC OpenMP::OpenMP_CXX)
+target_link_libraries(NN PUBLIC OpenMP::OpenMP_CXX)
 
 file(GLOB_RECURSE test_src tests/*)
 add_executable(NN_test ${test_src})
