--- a/mnist-configs/test.config
+++ b/mnist-configs/test.config
@@ -1,12 +1,13 @@
-num_epochs = 100
+rel_path_train_images = mnist-datasets/t10k-images.idx3-ubyte
+rel_path_train_labels = mnist-datasets/t10k-labels.idx1-ubyte
+
+rel_path_test_images = mnist-datasets/single-image.idx3-ubyte
+rel_path_test_labels = mnist-datasets/single-label.idx1-ubyte
+
+rel_path_log_file = log_predictions-ci.txt
+
+num_epochs = 1
 batch_size = 100
 hidden_size = 500
 learning_rate = 1E-3
 
-rel_path_train_images = mnist-datasets/train-images.idx3-ubyte
-rel_path_train_labels = mnist-datasets/train-labels.idx1-ubyte
-
-rel_path_test_images = mnist-datasets/t10k-images.idx3-ubyte
-rel_path_test_labels = mnist-datasets/t10k-labels.idx1-ubyte
-
-rel_path_log_file = log_predictions.txt
